<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2018 Saurabh Kumar
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.saurabh.java</groupId>
    <artifactId>JavaCon</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>15.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>SpecialKeywords</module>
        <module>JavaKathy</module>
        <module>ClassDesign</module>
        <module>Array</module>
        <module>Interfaces</module>
        <module>Inheritance</module>
        <module>Polymorphism</module>
        <module>InnerClass</module>
        <module>Exception</module>
        <module>Generics</module>
        <module>Collections</module>
        <module>Java8Lambda</module>
        <module>Java9Optional</module>
        <module>Java9Updates</module>
        <module>Concurrency</module>
        <module>Reflection</module>
        <module>JDBC</module>
        <module>JavaDS</module>
        <module>IO</module>
        <module>JsonIO</module>
        <module>RegExMatching</module>
        <module>Streams</module>
        <module>ReactiveJava</module>
        <module>Java11Updates</module>

    </modules>
</project>